--- a/vue2-app/package.json
+++ b/vue2-app/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
