--- a/vue3-app/package.json
+++ b/vue3-app/package.json
@@ -7,15 +7,16 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "vue": "^3.2.0"
+    "vue": "^3.2.0",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "vue-loader": "^17.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0",
-    "vue-loader": "^17.0.0",
-    "babel-loader": "^8.2.2",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
