--- a/vue2-app/package.json
+++ b/vue2-app/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.6.3",
     "vue-loader": "^15.11.1",
     "vue-template-compiler": "^2.7.16",
     "webpack": "^5.0.0",
