--- a/vue3-app/package.json
+++ b/vue3-app/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
+    "@vue/babel-preset-jsx": "^1.4.0",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.6.3",
     "vue-loader": "^17.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
