--- a/vue2-app/package.json
+++ b/vue2-app/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "single-spa": "^5.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
