--- a/vue2-app/package.json
+++ b/vue2-app/package.json
@@ -7,9 +7,10 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "single-spa": "^5.9.0",
+    "systemjs": "^6.1.2",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5",
-    "single-spa": "^5.9.0"
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
